# multilingual-dev-rag

./: .gitignore  README.md  README_RU.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
plans/: 001-issue-body.md  001-zvec-readonly-and-diagnostics.md  002-zvec-0.6-research.md  handoff-001.md  handoff-003.md  pickup-002.md  pickup-003.md
scripts/: rag_proc_check.ps1  rag_proc_watch.ps1
src/dev_rag/: __init__.py  chunker.py  cli.py  config.py  embedder.py  fts_normalizer.py  indexer.py  mcp_server.py  process_guard.py  qdrant_searcher.py  reader.py  searcher.py  zvec_indexer.py  zvec_searcher.py
src/dev_rag/profiles/: generic.json  k3_mebel.json
tests/: test_config.py  test_diagnostics.py  test_fts_normalizer.py  test_process_guard.py  test_zvec_integration.py
