[build-system]
# >=77, не 64: license = "Apache-2.0" как SPDX-строка и license-files в
# [project] — это PEP 639, и до 77 setuptools их не понимает. С build-isolation
# pip ставит свежий setuptools и всё собирается, поэтому расхождение не видно;
# сборка с --no-build-isolation на setuptools 64-76 упала бы на метаданных.
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "multilingual-dev-rag"
dynamic = ["version"]
description = "Local-first multilingual RAG for code and technical docs. In-process hybrid retrieval (vector + full-text) with FTS for Cyrillic and other non-ASCII scripts."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Aleksandr Dragunkin"}]
keywords = [
    "rag",
    "vector-search",
    "full-text-search",
    "hybrid-search",
    "multilingual",
    "cyrillic",
    "code-search",
    "zvec",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    # Держать синхронно с матрицей в .github/workflows/ci.yml: здесь заявляется
    # только то, что реально прогоняется. Из этого списка shields.io строит
    # бейдж pyversions — забытая версия читается пользователем как «не
    # поддерживается». 3.14 не заявлен намеренно: вилки zvec под cp314 есть,
    # но CI его не гоняет, а обещать непроверенное мы уже пробовали.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
    "Natural Language :: Russian",
    "Natural Language :: English",
]

dependencies = [
    # process_guard: автоуборка процессов-дубликатов dev_rag.mcp_server при
    # старте нового инстанса. psutil кросс-платформенный, wheels есть под все
    # ОС из CI-матрицы (ubuntu/windows/macos × py3.10-3.13). Альтернативы
    # (PowerShell/wmic шелл-ауты) — Windows-only и непроверяемы юнит-тестами;
    # optional-extra создал бы тот самый «тихий отказ» (в чистой установке
    # защита молча не работала бы), с которым проект борется. >=5.9 — нижняя
    # граница со стабильным API Process.cmdline()/create_time()/parents().
    # См. plan 003 и src/dev_rag/process_guard.py.
    "psutil>=5.9",
    # zvec backend — in-process, no servers. 64-bit Python only.
    # Верхняя граница <0.6 намеренная: zvec 0.6.0 сменил токенайзер `standard`
    # (стал матчить кириллицу на Win/Linux и перестал резать идентификаторы вроде
    # obj_k3_gab3 по подчёркиванию). Это ломает канареечные тесты
    # test_standard_cyrillic_behavior_matches_platform и
    # test_identifier_split_by_standard и меняет recall поиска. Пока переход на
    # 0.6.0 не оценён (нужен пересбор индекса, возможно уходит поле text_fts) —
    # держим известно-рабочую 0.5.x. См. plan 002.
    "zvec>=0.5.1,<0.6",
    "sentence-transformers>=2.0",
]

[project.optional-dependencies]
# Legacy backend: needs a running Qdrant server and an Ollama embedder.
qdrant = ["qdrant-client>=1.7", "httpx>=0.24"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/AlexandrDragunkin/multilingual-dev-rag"
Repository = "https://github.com/AlexandrDragunkin/multilingual-dev-rag"
Issues = "https://github.com/AlexandrDragunkin/multilingual-dev-rag/issues"

[project.scripts]
dev-rag-index = "dev_rag.cli:main"
dev-rag-mcp = "dev_rag.mcp_server:main"
dev-rag-search = "dev_rag.cli:search_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dev_rag = ["profiles/*.json"]

[tool.setuptools_scm]
# Версия берётся из git-тега (v0.1.0 -> 0.1.0). Раньше номер жил в трёх местах
# — здесь, в src/dev_rag/__init__.py и в serverInfo у mcp_server — и разъезжался:
# pip показывал 0.1.0, а dev_rag.__version__ — 0.1.0rc1, потому что dist-info не
# пересоздали после бампа. Теперь источник правды один, и сверять нечего.
#
# Тегов в клоне нет -> версия молча вырождается: сборка в клоне без тегов даёт
# 0.1.dev1+g<hash> (проверено), отделываясь UserWarning про shallow. Не падает,
# просто отвечает неверно. Отсюда `fetch-depth: 0` в обоих workflow.
#
# fallback_version намеренно не задан: он бы превратил это тихое расхождение в
# ещё более тихое. Сборка не из git-дерева (например, из ZIP с GitHub) упадёт —
# и это правильный ответ. Сборка из sdist работает: номер уже зашит в PKG-INFO.

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests hitting the real zvec engine (create temp collections, slower)",
]
